Fixes warmaup process
